--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="invalid_email">Невалидный email</string>
     <string name="invalid_password">Невалидный пароль</string>
     <string name="auth_error">Неверный логин или пароль</string>
+
+
+    <string name="education_card_title">Учебная карточка</string>
+    <string name="education_card_msg">Доступ к учебному плану обучающегося</string>
+    <string name="education_card_msg_more"> • Доступ к рабочим программам дисциплин/практик обучающего\n • Фиксация результатов промежуточной аттестации обучающегося\n • Фиксация хода образовательного процесса обучающегося\n • Список приказов по студенческому составу обучающегося\n • Документы и заявления обучающегося</string>
+    <string name="more">Подробнее</string>
 </resources>
