add intercepter for this api and logout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="education_card_msg">Доступ к учебному плану обучающегося</string>
     <string name="education_card_msg_more"> • Доступ к рабочим программам дисциплин/практик обучающего\n • Фиксация результатов промежуточной аттестации обучающегося\n • Фиксация хода образовательного процесса обучающегося\n • Список приказов по студенческому составу обучающегося\n • Документы и заявления обучающегося</string>
     <string name="more">Подробнее</string>
+    <string name="logout">Выйти</string>
 </resources>
