--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,8 @@
     <string name="base_info_card_course_education">Курс:</string>
     <string name="base_info_card_financy">Финансирование:</string>
     <string name="base_info_card_education_time">Срок обучения:</string>
+
+    <string name="education_program_table_name">Наименование</string>
+    <string name="education_program_table_control_form">Форма контроля</string>
+    <string name="education_program_table_hour">Объём (часов)</string>
 </resources>
