--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
 
     <string name="education_card_entries">Оценки</string>
     <string name="education_card_session">Семестр %s</string>
+
+    <string name="education_card_orders">Приказы</string>
 </resources>
