--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="education_card_session">Семестр %s</string>
 
     <string name="education_card_orders">Приказы</string>
+    <string name="schedule">Расписание</string>
 </resources>
